tests/errors/functions3.pa
program gcd(output);
var a, b: integer;
	
function abc(a1: boolean): integer; FORWARD;

function integer(a1: boolean): integer;
	var a , B: integer;
	begin
		
	end;


function integer(a: integer): real;
	begin
		a := abc(true);
	end;

begin
end.
